--- a/View/forside.html
+++ b/View/forside.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Eksamensopgave</title>
-    <link rel="stylesheet" href="forside.css">
+    <link rel="stylesheet" href="forside.css">     
 </head>
 
 <body>
@@ -37,9 +37,9 @@
                 <label>Angiv hvilket køn du har interesse for</label>     
                 <select id="interesse" name="interesse" id="interesse">
                 <option value="default">Vælg køn</option>
-                <option value="køn1">Mand</option>
-                <option value="køn2">Kvinde</option>
-                <option value="køn3">Andet</option>
+                <option value="Mand">Mand</option>
+                <option value="Kvinde">Kvinde</option>
+                <option value="Andet">Andet</option>
                </select>
         </div>
 <br>
@@ -47,9 +47,9 @@
              <label>Angiv køn</label>     
              <select id="køn" name="køn">
              <option value="default">Vælg køn</option>
-             <option value="køn1">Mand</option>
-             <option value="køn2">Kvinde</option>
-             <option value="køn3">Andet</option>
+             <option value="Mand">Mand</option>
+             <option value="Kvinde">Kvinde</option>
+             <option value="Andet">Andet</option>
              </select>
         </div>
 <br>
@@ -106,6 +106,7 @@
 
 </head>
 <script src="forside.js"></script>
+
 </body>
 
 
