--- a/View/HTML/forside.html
+++ b/View/HTML/forside.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Eksamensopgave</title>
-    <link rel="stylesheet" href="forside.css">     
+    <link rel="stylesheet" href="/CSS/forside.css">     
 </head>
 
 <body>
@@ -74,38 +74,10 @@
 
 </form>
 
-
-
-
-
-
-
-<!--Log ind formlen-->
-<div id="form2" class="login">
-        <div>
-                <h2 id="header2">Login her</h2>
-                
-        </div>
-        <div>
-                <label>Angiv email</label>
-   <br>
-                    <input id="email2" name="email2" placeholder="Skriv din email her">
-           </div>
-           <div>
-                <label>Angiv din adgangskode</label>
-  <br>
-                   <input id= "adgangskode2" name="adgangskode2" placeholder="Skriv din adgangskode her">
-          </div>
-          <div>
-                     <button id="Login"    type="submit" name="submit">Login</button>
-        </div>
-</div>
-
-
-
-
 </head>
 <script src="forside.js"></script>
+<script src="user.js"></script>
+
 
 </body>
 
