--- a/View/HTML/login.html
+++ b/View/HTML/login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <body>
-            
+            <form id="form2"></form>
             <div id="form2" class="login">
                 <div>
                         <h2 id="header2">Login her</h2>     
